# psychic-barnacle

./: .gitignore  CLA-INTEGRATION.md  CLA.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: README.md  pull_request_template.md
.github/workflows/: ci.yml  cla-check.yml  cla-labeler.yml  cla-verified-gate.yml
scripts/: verify-cla.sh
src/: index.html  styles.css
src/psychic_barnacle/: __init__.py  tasks.py
tests/: README.md  test_tasks.py
