[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psychic-barnacle"
version = "0.1.0"
description = "Lightweight task management primitives for Psychic Barnacle"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Psychic Barnacle Maintainers"}]
keywords = ["tasks", "productivity", "cli"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
